--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,3 @@
-os: freebsd
-#dist: focal
-#vm: 
-#  create:
-#    name: root_image_3
-
-jobs:
-  include:
-    - name: "job one"
-      vm: 
-        create:
-          name: job_one
-      script: 
-        - echo "condition with job one"
-        - sleep 1
-    - name: "job two"
-      vm: 
-        create:
-          name: job_two
-      script: 
-        - echo "condition with job two"
-        - sleep 2
+language: node_js
+script:
+  - echo 'OK'
