--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,22 @@
-os: linux
+os: freebsd
 dist: focal
-vm: #existing key
-create:
-name: my_custom_name #custom identifier string, human readable
-before_install:
+vm: 
+  create:
+    name: root_image_1
 
-sudo apt-get -y install libxml2-dev
-addons:
-apt:
-update: true
+jobs:
+  include:
+    - name: "job one"
+      vm: 
+        create:
+          name: job_one
+      script: 
+        - echo "condition with job one"
+        - sleep 1
+    - name: "job two"
+      vm: 
+        create:
+          name: job_two
+      script: 
+        - echo "condition with job two"
+        - sleep 2
