--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ jobs:
       vm: 
         size: [large]
         create:
-          name: one_50
+          name: 03_june_01
       script: 
         - echo "condition with job one"
         - echo $TRAVIS_COMMIT_MESSAGE
@@ -16,7 +16,7 @@ jobs:
       vm: 
         size: [large]
         create:
-          name: two_60
+          name: 03_june_02
       script: 
         - echo "condition with job two"
         - echo $TRAVIS_COMMIT_MESSAGE
@@ -25,7 +25,7 @@ jobs:
       vm: 
         size: [large]
         create:
-          name: three_70
+          name: 03_june_03
       script: 
         - echo "condition with job three"
         - echo $TRAVIS_COMMIT_MESSAGE
