--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,6 @@ jobs:
         use:
           name: 03_june_03
       script: 
-        - echo "condition with job three"
+        - echo "condition with job threee"
         - echo $TRAVIS_COMMIT_MESSAGE
         - sleep 70
