--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ jobs:
   include:
     - name: "job one"
       vm: 
-        size: [large]
-        use:
-          name: 12_june_1
+        size: [small]
+        create:
+          name: 16_june_1
       script: 
         - echo "condition with job onee"
         - echo $TRAVIS_COMMIT_MESSAGE
